@@ -31,6 +31,7 @@ https://github.com/elastic/beats/compare/v5.3.1...master[Check the HEAD diff]
 
 *Filebeat*
 - Properly shut down crawler in case one prospector is misconfigured. {pull}4037[4037]
+- Fix panic in JSON decoding code if the input line is "null". {pull}4042[4042]
 
 *Heartbeat*
 
